# bmi270_python

./: .gitignore  README.md  base.py  pyproject.toml  receive_data.py  setup.py
BMI270_I2C/: __init__,py  config_file.py
examples/: base.py  receive_data.py  ros2_publisher.py
src/BMI270_I2C/: BMI270.py  definitions.py
src/bmi270/: BMI270.py  UDP.py  __init__,py  definitions.py  registers.py
